buildPod.yml
apiVersion: v1
kind: Pod
spec:
  containers:
    - name: maven
      image: maven:3.8-jdk-21
      command:
        - sleep
      args:
        - infinity
      volumeMounts:
        - mountPath: "/root/.m2"
          name: "maven-repo"
          readOnly: false
    - name: kubectl
      image: localhost:32000/lh32469/kubectl:v5
      command:
        - sleep
      args:
        - infinity
    - name: docker
      image: docker:latest
      command:
        - sleep
      args:
        - infinity
  volumes:
    - hostPath:
        path: "/clustered/repos/maven"
      name: "maven-repo"
